[gd_scene load_steps=19 format=3 uid="uid://dtxtruoc1y3ha"]

[ext_resource type="Script" path="res://barkley2/autoloads/screen.gd" id="1_6uogh"]
[ext_resource type="Texture2D" uid="uid://dbmn754wm5tb7" path="res://barkley2/assets/cursor/s_curs_gunmode_0.png" id="2_kjkhy"]
[ext_resource type="Texture2D" uid="uid://dqdbba4wnsgmq" path="res://barkley2/assets/cursor/s_curs_gunmode_1.png" id="3_gsyfu"]
[ext_resource type="Texture2D" uid="uid://ca2uer1n2rgjh" path="res://barkley2/assets/cursor/s_curs_gunmode_2.png" id="4_44its"]
[ext_resource type="Texture2D" uid="uid://dg2gspahteiw6" path="res://barkley2/assets/cursor/s_curs2_0.png" id="5_tbqli"]
[ext_resource type="Texture2D" uid="uid://doehwej7utvu6" path="res://barkley2/assets/cursor/s_curs2_2.png" id="6_ji7b8"]
[ext_resource type="Texture2D" uid="uid://ojoqkotd8san" path="res://barkley2/assets/cursor/s_curs2_3.png" id="7_5xe3i"]
[ext_resource type="Texture2D" uid="uid://b4hs662bc4lvx" path="res://barkley2/assets/cursor/s_curs2_1.png" id="8_h4si6"]
[ext_resource type="Texture2D" uid="uid://kwp4adx8xv1k" path="res://barkley2/assets/cursor/s_curs_0.png" id="9_b32sw"]
[ext_resource type="Texture2D" uid="uid://xed4c0p862fo" path="res://barkley2/assets/cursor/s_curs_1.png" id="10_ybqq6"]
[ext_resource type="Texture2D" uid="uid://i1nicnst0a0f" path="res://barkley2/assets/cursor/s_curs_2.png" id="11_6l75t"]
[ext_resource type="Theme" uid="uid://ch0qvwhfesyka" path="res://barkley2/themes/main2.tres" id="12_584kq"]
[ext_resource type="Texture2D" uid="uid://ba7tkmx4xg5sd" path="res://barkley2/assets/b2_original/images/merged/s_pausemenu_buttonlight.png" id="13_wpxq6"]
[ext_resource type="Texture2D" uid="uid://2f8cr6uarncg" path="res://barkley2/assets/b2_original/images/merged/s_diag_bg.png" id="14_5qnmd"]
[ext_resource type="Texture2D" uid="uid://bu7c45dom4m8l" path="res://barkley2/assets/b2_original/images/merged/s_return.png" id="15_wweog"]

[sub_resource type="SpriteFrames" id="SpriteFrames_3xx3n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_kjkhy")
}, {
"duration": 1.0,
"texture": ExtResource("3_gsyfu")
}, {
"duration": 1.0,
"texture": ExtResource("4_44its")
}],
"loop": true,
"name": &"bulls",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_tbqli")
}],
"loop": true,
"name": &"cursor",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_ji7b8")
}, {
"duration": 1.0,
"texture": ExtResource("7_5xe3i")
}],
"loop": true,
"name": &"grab",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_h4si6")
}],
"loop": true,
"name": &"hand",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_b32sw")
}, {
"duration": 1.0,
"texture": ExtResource("10_ybqq6")
}, {
"duration": 1.0,
"texture": ExtResource("11_6l75t")
}],
"loop": true,
"name": &"point",
"speed": 5.0
}]

[sub_resource type="Gradient" id="Gradient_fnaht"]
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1)

[sub_resource type="GDScript" id="GDScript_6nb5h"]
script/source = "extends TextureRect

var time := 0.0

func _physics_process(delta: float) -> void:
	if B2_Screen.is_showing_notify:
		time += delta
		var curve : float = ( sin(time * 5.0) + PI / 2.0) / PI
		modulate.a = curve
"

[node name="cursor" type="CanvasLayer"]
process_mode = 3
layer = 10
script = ExtResource("1_6uogh")

[node name="mouse" type="AnimatedSprite2D" parent="."]
z_index = 100
z_as_relative = false
sprite_frames = SubResource("SpriteFrames_3xx3n")
animation = &"cursor"

[node name="trail" type="Line2D" parent="."]
top_level = true
width = 5.0
gradient = SubResource("Gradient_fnaht")

[node name="pause_screen" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("12_584kq")
color = Color(0, 0, 0, 0.7)

[node name="resume" type="Button" parent="pause_screen"]
z_index = 10
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -45.0
offset_right = 192.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 2
text = "Resume Reality"

[node name="button_bg_resume" type="TextureRect" parent="pause_screen/resume"]
visible = false
modulate = Color(1, 1, 1, 0.65)
z_index = -2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("13_wpxq6")

[node name="exit" type="Button" parent="pause_screen"]
z_index = 10
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = 15.0
offset_right = 192.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
text = "End The Pain"

[node name="button_bg_exit" type="TextureRect" parent="pause_screen/exit"]
visible = false
modulate = Color(1, 1, 1, 0.65)
z_index = -2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("13_wpxq6")

[node name="notify_item" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("12_584kq")
color = Color(0, 0, 0, 0.15)

[node name="dialog" type="TextureRect" parent="notify_item"]
modulate = Color(1, 1, 1, 0.75)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("14_5qnmd")
stretch_mode = 1

[node name="dialog_text" type="Label" parent="notify_item/dialog"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -21.5
offset_right = 150.0
offset_bottom = 21.5
grow_horizontal = 2
grow_vertical = 2
text = "Male rats have huge balls, but do female rats have huge ovaries?"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="return" type="TextureRect" parent="notify_item/dialog"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -18.0
offset_top = -20.0
offset_right = -6.0
offset_bottom = -6.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("15_wweog")
script = SubResource("GDScript_6nb5h")
